Add more idioms

--- a/TypeErasure:Any/CMakeLists.txt
+++ b/TypeErasure:Any/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(ReferenceCounting)
+project(TypeErasure)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(SOURCE ${PROJECT_SOURCE_DIR}/ReferenceCounting.cpp)
+set(SOURCE ${PROJECT_SOURCE_DIR}/TypeErasure.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCE})
